Change button background color to fix contrast error

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -419,7 +419,7 @@ main {
     border: 2px solid antiquewhite;
     color: var(--background);
     margin: 10px auto 30px;
-    background-color: var(--orange);
+    background-color: var(--black);
 }
 
 .btn-simple:hover {
